```mermaid
erDiagram
    %% Mujarrad Database Schema v1.0.0
    %% Constitutional Principles: Node Supremacy, Relationship-Driven Structure

    USERS ||--o{ SPACES : owns
    USERS ||--o{ NODES : creates
    USERS ||--o{ ATTRIBUTES : creates
    USERS ||--o{ NODE_VERSIONS : creates

    SPACES ||--o{ NODES : contains
    SPACES ||--o{ ATTRIBUTES : contains

    NODES ||--o{ ATTRIBUTES : "source (outgoing)"
    NODES ||--o{ ATTRIBUTES : "target (incoming)"
    NODES ||--o{ NODE_VERSIONS : "has history"
    NODES }o--|| NODE_VERSIONS : "current version"

    USERS {
        uuid id PK "Primary key"
        varchar username UK "Unique username"
        varchar email UK "Unique email"
        varchar password_hash "BCrypt hashed password"
        timestamp created_at "Account creation timestamp"
        timestamp updated_at "Last update timestamp"
    }

    SPACES {
        uuid id PK "Primary key"
        uuid owner_id FK "References users(id)"
        varchar name "Space name"
        varchar slug UK "URL-safe unique identifier"
        timestamp created_at "Creation timestamp"
        timestamp updated_at "Last update timestamp"
    }

    NODES {
        uuid id PK "Primary key"
        uuid space_id FK "References spaces(id)"
        varchar node_type "REGULAR, CONTEXT, ASSUMPTION"
        varchar title "Node title"
        varchar slug "URL-safe slug (unique within space)"
        text content "Markdown content"
        jsonb node_details "Flexible metadata (category, tags, etc.)"
        uuid current_version_id FK "References node_versions(id)"
        uuid created_by FK "References users(id)"
        uuid modified_by FK "References users(id)"
        timestamp created_at "Creation timestamp"
        timestamp updated_at "Last modification timestamp"
    }

    ATTRIBUTES {
        uuid id PK "Primary key"
        uuid space_id FK "References spaces(id)"
        uuid source_node_id FK "Source node (parent/from)"
        uuid target_node_id FK "Target node (child/to)"
        varchar attribute_name "Relationship type: contains, depends_on, triggers, references, next, calls"
        varchar attribute_type_mode "TYPED or SCHEMALESS"
        varchar attribute_data_type "NUMBER, STRING, BOOLEAN, ENUM, JSON (for TYPED mode)"
        jsonb attribute_value "Flexible value storage"
        jsonb properties "Additional metadata"
        uuid created_by FK "References users(id)"
        timestamp created_at "Creation timestamp"
    }

    NODE_VERSIONS {
        uuid id PK "Primary key"
        uuid node_id FK "References nodes(id)"
        int version_number "Incremental version number"
        varchar title "Title snapshot"
        text content "Content snapshot"
        jsonb node_details_snapshot "Metadata snapshot"
        jsonb attributes_snapshot "Relationships snapshot (future)"
        uuid created_by FK "References users(id)"
        timestamp created_at "Version creation timestamp"
    }

    %% Indexes (Performance)
    %% Users: username, email (unique)
    %% Spaces: owner_id, slug (unique)
    %% Nodes: space_id, slug (composite unique), node_type, created_at
    %% Attributes: space_id, source_node_id, target_node_id, attribute_name
    %% NodeVersions: node_id, version_number (composite unique)

    %% Constraints
    %% - ON DELETE CASCADE: space deletion cascades to nodes/attributes
    %% - ON DELETE CASCADE: node deletion cascades to attributes/versions
    %% - UNIQUE(space_id, slug): Nodes have unique slugs per space
    %% - UNIQUE(node_id, version_number): Version numbers unique per node
    %% - CHECK: node_type IN ('REGULAR', 'CONTEXT', 'ASSUMPTION')
    %% - CHECK: attribute_type_mode IN ('TYPED', 'SCHEMALESS')
```

## Schema Notes

### Constitutional Principles

**Node Supremacy**: All node types (REGULAR, CONTEXT, ASSUMPTION) stored in single `nodes` table with `node_type` discriminator.

**Relationship-Driven Structure**: No `parent_id` FK in nodes table. ALL relationships via `attributes` table.

**Version Fidelity**: Immutable `node_versions` table with JSONB snapshots. Every node update creates new version.

**Multi-Tenancy**: `space_id` FK on all major tables enforces isolation.

### Cycle Detection Rules (FR-008)

**Granular Containment Cycle Detection**:
- ❌ **Context→Node CONTAINS**: Cycles FORBIDDEN (source.node_type='CONTEXT', target.node_type='REGULAR', attribute_name='contains')
  - Enforced in `GraphService.hasContainmentCycle()` via DFS traversal
  - Prevents cycles for UI navigation/breadcrumbs

- ✅ **Node→Node CONTAINS**: Cycles ALLOWED (both nodes have node_type='REGULAR')
  - Enables recursive data structures in Abstract Logic

- ✅ **Context→Context CONTAINS**: Cycles ALLOWED (both nodes have node_type='CONTEXT')
  - Enables nested context hierarchies

- ✅ **All non-CONTAINS relationships**: Cycles ALLOWED (attribute_name IN ('depends_on', 'triggers', 'references', 'next', 'calls'))
  - Enables workflow loops, recursion, state machines

### Attribute Types

**attribute_name** (Relationship Types):
- `contains` - Hierarchical containment (cycle detection applies)
- `depends_on` - Dependency relationship
- `triggers` - Event triggering
- `references` - Cross-reference
- `next` - Sequential flow
- `calls` - Function/method invocation

**attribute_type_mode**:
- `TYPED` - Validated attributes with `attribute_data_type` (NUMBER, STRING, BOOLEAN, ENUM, JSON)
- `SCHEMALESS` - Arbitrary JSONB values in `attribute_value`

### JSONB Columns

**nodes.node_details**: Flexible metadata
```json
{
  "category": "planning",
  "priority": "high",
  "tags": ["backend", "api"],
  "customField": "any value"
}
```

**attributes.attribute_value**: Relationship value storage
```json
{
  "value": 10,
  "unit": "hours",
  "confidence": 0.95
}
```

**node_versions.node_details_snapshot**: Immutable metadata snapshot
```json
{
  "category": "planning",
  "priority": "high",
  "timestamp": "2025-01-15T10:00:00Z"
}
```

### Performance Indexes

**Primary Performance Indexes**:
1. `nodes(space_id)` - Space-scoped queries
2. `nodes(space_id, slug)` - Unique constraint + fast lookup
3. `attributes(source_node_id, attribute_name)` - Outgoing relationships
4. `attributes(target_node_id, attribute_name)` - Incoming relationships
5. `node_versions(node_id, version_number)` - Version history retrieval

**Secondary Indexes**:
- `nodes(node_type)` - Filter by type
- `nodes(created_at)` - Chronological queries
- `attributes(space_id)` - Space cleanup

### Cascade Behavior

**Space Deletion**:
```
space → nodes → node_versions
         → attributes
```

**Node Deletion**:
```
node → node_versions (all versions deleted)
    → attributes (where source_node_id OR target_node_id = deleted node)
```

**Smart Cascade (force=true)**:
- Check child parent count via `count_by_target_node_id_and_attribute_name('contains')`
- If parent_count = 1: Recursive cascade delete
- If parent_count > 1: Orphan (remove only this relationship)

### Migration History

- `V1__Initial_Schema.sql` - Users, Spaces, Nodes
- `V2__Add_Attributes_Table.sql` - Attributes with JSONB
- `V3__Add_Versions_Table.sql` - NodeVersions for immutability
- `V4__Add_Indexes.sql` - Performance optimization
- `V5__Add_Constraints.sql` - Foreign keys, unique constraints, check constraints

### Future Enhancements

- [ ] `space_collaborators` table (many-to-many)
- [ ] `node_comments` table (discussion threads)
- [ ] Full-text search indexes on `nodes.content` (PostgreSQL tsvector)
- [ ] Audit log table (track all modifications)
- [ ] Soft delete support (deleted_at timestamp)
